<resources>
    <string name="app_name">Marketplace</string>
    <string name="action_settings">Profile</string>
    <string name="SDSM_SignOut">Logout</string>
    <string name="SDSM_Main">Simple Digital Solution Marketplace</string>
    <string name="SDSM_Main_btnGames">Games</string>
    <string name="SDSM_Main_btnUtil">Utilities</string>
    <string name="SDSM_Main_Randomizer">Feeling Lucky?</string>
    <string name="SDSM_Main_GameOfTheWeek">Game of the Week</string>
    <string name="SDSM_Main_UtilityOfTheWeek">Utility of the Week</string>
    <string name="SDSM_Main_Randomizer_Utilitiy">Random Utility</string>
    <string name="SDSM_Main_Randomizer_Game">Random Game</string>
    <string name="SDSM_Login">SDSM Login</string>
    <string name="SDSM_Login_ActionBar">Login</string>
    <string name="SDSM_Login_User">Username:</string>
    <string name="SDMS_Login_Password">Password:</string>
    <string name="SDMS_Login_Hint_User">Enter username</string>
    <string name="SDMS_Login_Hint_Pass">Enter password</string>
    <string name="SDMS_Login_SignIn">Sign In</string>
    <string name="SDMS_Login_SignUp">Sign Up</string>
    <string name="SDSM_SignUp">SDSM Sign Up</string>
    <string name="SDSM_SignUp_ActionBar">Sign Up</string>
    <string name="SDSM_SignUp_login">Login</string>
    <string name="SDSM_SignUp_Username">Username:</string>
    <string name="SDSM_SignUp_FName">First name:</string>
    <string name="SDSM_SignUp_LName">Last name:</string>
    <string name="SDSM_SignUp_Email">Email:</string>
    <string name="SDSM_SignUp_State">State:</string>
    <string name="SDSM_SignUp_Password">Password:</string>
    <string name="SDSM_SignUp_RePassword">Re-enter Password:</string>
    <string name="SDSM_SignUp_Submit">Submit</string>
    <string name="SDSM_SignUp_Placeholder_FName">John</string>
    <string name="SDSM_SignUp_Placeholder_LName">Smith</string>
    <string name="SDSM_SignUp_Placeholder_UserName">JohnSmithIsCommon</string>
    <string name="SDSM_SignUp_Placeholder_Email">jsmith@gmail.com</string>
    <string name="SDSM_SignUp_Placeholder_State">Any of the 51 US States</string>
    <string name="SDSM_SignUp_Placeholder_Password">JsmithPass</string>
    <string name="SDSM_SignUp_Placeholder_RePassword">JsmithPass</string>
    <string name="SDSM_Games">SDSM Games</string>
    <string name="SDSM_Games_ActionBar">Games</string>
    <string name="SDSM_Games_Cholors">Cholors</string>
    <string name="SDSM_Games_RyanGameApp">Ryans Game</string>
    <string name="SDSM_Games_ZachGameApp">Zachs Game</string>
    <string name="SDSM_Utilities">SDSM Utilities</string>
    <string name="SDSM_Utilities_Header">Utilities</string>
    <string name="SDSM_Utilities_RyanFlashApp">Ryans Flashlight</string>
    <string name="SDSM_Utilities_ZachFlashApp">ZFlash</string>
    <string name="SDSM_Games_Cholors_Header">Cholors</string>
    <string name="SDSM_Games_Cholors_HighScore">High Score: </string>
    <string name="SDSM_Games_Cholors_WorldHighScore">World Score: </string>
    <string name="SDSM_Games_Cholors_PurchasingPiece">Only 0.99 for more points per click!</string>
    <string name="SDSM_Games_Cholors_Start">Start!</string>
    <string name="SDSM_Games_Cholors_Twitter">Share High Score to Twitter!</string>
    <string name="on_label">On</string>
    <string name="off_label">Off</string>
    <string name="strobe_label">Start Strobe</string>
    <string name="stop_label">Stop Strobe</string>
    <string name="exit_label">Exit</string>
    <string name="SDSM_Utilities_ZVibrate">ZVibrator</string>
    <string name="SDSM_Utilities_ZVibrate_Header">ZVibrator</string>
    <string name="SDSM_Utilities_Flashlight">Flashlight</string>
    <string name="SDSM_Utilities_Flashlight_Purchase">Only 1.99 for more features for Flashlight!</string>
    <string name="SDSM_Utilities_Flashlight_Power">Power</string>
    <string name="SDSM_Utilities_Flashlight_SoS">S.O.S.</string>
    <string name="SDSM_Purchase">Purchase</string>
    <string name="SDSM_Purchase_CreditCard">Credit Card</string>
    <string name="SDSM_Purchase_CardType">Card Type</string>
    <string name="SDSM_Purchase_CardType_Visa">Visa</string>
    <string name="SDSM_Purchase_CardType_MasterCard">MasterCard</string>
    <string name="SDSM_Purchase_CardType_AmericanExpress">American Express</string>
    <string name="SDSM_Purchase_ExpirationDate">Expiration</string>
    <string name="SDSM_Purchase_SecurityCode">Security Code</string>
    <string name="SDSM_Purchase_Buy">Submit</string>
    <string name="SDSM_Purchase_Validation_CreditCard">4543434211678890</string>
    <string name="SDSM_Purchase_Validation_CardType">Visa,MstrCard,AmEx</string>
    <string name="SDSM_Purchase_Validation_Expiration">Ex. 06/2017</string>
    <string name="SDSM_Purchase_Validation_SecurityCode">Ex. 618</string>
    <string name="SDSM_Profile">Your Profile</string>
    <string name="SDSM_Profile_Username">Username</string>
    <string name="SDSM_Profile_FirstName">First Name</string>
    <string name="SDSM_Profile_LastName">Last Name</string>
    <string name="SDSM_Profile_Email">Email</string>
    <string name="SDSM_Profile_State">State</string>
    <string name="SDSM_Copyright">Marketplace Copyright Notice</string>
    <string name="SDSM_Copyright_Copyright">Copyright Info</string>
    <string name="SDSM_Copyright_RequiredFirst">License and Copyright Notice</string>
    <string name="SDSM_Copyright_RequiredSecond">State Changes</string>
    <string name="SDSM_Copyright_PermittedFirst">Commerical Use</string>
    <string name="SDSM_Copyright_PermittedSecond">Distribution</string>
    <string name="SDSM_Copyright_PermittedThird">Modification</string>
    <string name="SDSM_Copyright_PermittedFourth">Patent Grant</string>
    <string name="SDSM_Copyright_PermittedFifth">Private Use</string>
    <string name="SDSM_Copyright_PermittedSixth">Sublicensing</string>
    <string name="SDSM_Copyright_ForbiddenFirst">Hold Liable</string>
    <string name="SDSM_Copyright_ForbiddenSecond">Use Trademark</string>
    <string name="SDSM_Copyright_Apache_License">Apache License 2.0</string>
    <string name="SDSM_Copyright_Apache_LicenseFirst">Apache License</string>
    <string name="SDSM_Copyright_Apache_LicenseSecond">Version 2.0, January 2004</string>
    <string name="SDSM_Copyright_Apache_LicenseThird">http://www.apache.org/licenses/</string>
    <string name="SDSM_Copyright_Apache_LicenseFourth">TERMS AND CONDITIONS FOR USE, REPRODUCTION, AND DISTRIBUTION</string>
</resources>