<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextSwitcher
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textSwitcher"
            android:layout_column="23" />
    </TableRow>

    <Button android:layout_gravity="left"
            android:id="@id/on_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on_label" />
    <Button android:layout_gravity="left"
            android:id="@id/off_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off_label" />
    <Button android:layout_gravity="left"
            android:id="@id/strobe_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/strobe_label" />
    <Button android:layout_gravity="left"
            android:id="@id/stop_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_label" />
    <Button android:layout_gravity="left"
            android:id="@id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_label" />
</TableLayout>