<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ZVibrator">

    <TextView android:text="@string/SDSM_Utilities_ZVibrate" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginLeft="125dp"
        android:textSize="25dp" />

    <Button android:layout_gravity="start"
        android:id="@+id/on_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/on_label"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/textView"
        android:layout_alignLeft="@+id/off_button"
        android:layout_alignStart="@+id/off_button" />
    <Button android:layout_gravity="start"
        android:id="@+id/off_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off_label"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />
    <Button android:layout_gravity="start"
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit_label"
        android:layout_marginBottom="104dp"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/on_button"
        android:layout_alignStart="@+id/on_button" />
</RelativeLayout>