<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:background="#585858"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/SDSM_Purchase"
                android:id="@+id/purchaseApp"
                android:layout_gravity="center"
                android:textColor="#ffffffff"
                android:layout_marginTop="30dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="30dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="#ff000000"
                android:layout_weight="0.99">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/SDSM_Purchase_CreditCard"
                        android:id="@+id/textView5"
                        android:textColor="#ffffffff"
                        android:textSize="25sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginBottom="5dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/creditCard"
                        android:ems="10"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:background="#ffffffff"
                        android:layout_marginTop="8dp"
                        android:hint="@string/SDSM_Purchase_Validation_CreditCard" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/SDSM_Purchase_CardType"
                        android:id="@+id/textView6"
                        android:textColor="#ffffffff"
                        android:textSize="25sp"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="10dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/cardType"
                        android:background="#ffffffff"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginTop="3dp"
                        android:hint="@string/SDSM_Purchase_Validation_CardType" />

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearLayout2"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/SDSM_Purchase_ExpirationDate"
                        android:id="@+id/textView7"
                        android:textColor="#ffffffff"
                        android:textSize="25sp"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="10dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/expiration"
                        android:background="#ffffffff"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginTop="3dp"
                        android:hint="@string/SDSM_Purchase_Validation_Expiration" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearLayout3"
                    android:layout_marginBottom="10dp" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/SDSM_Purchase_SecurityCode"
                        android:id="@+id/textView8"
                        android:textColor="#ffffffff"
                        android:textSize="25sp"
                        android:layout_marginTop="30dp"
                        android:layout_marginLeft="10dp" />

                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:id="@+id/securityCode"
                        android:background="#ffffffff"
                        android:layout_gravity="bottom"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="21dp"
                        android:layout_marginTop="3dp"
                        android:hint="@string/SDSM_Purchase_Validation_SecurityCode" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:id="@+id/linearLayout4"
                    android:layout_marginBottom="10dp"
                    android:weightSum="1">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/SDSM_Purchase_Buy"
                        android:id="@+id/btnSubmit"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>